# lumen

./: .gitignore  README.md  README.zh.md  TECHNICAL_REPORT.md  benchmark_tools.py  chat.py  chat_commands.py  pyproject.toml  test_lumen.py
.engram/: session_memory.json
demos/: demo1_output.txt  demo2_write_and_run.py  demo3_bugfix.py  demo3_output.txt  demo4_multi_model.py
examples/: basic.py  benchmark_tools.py  demo1_read_codebase.py  demo2_output.txt  demo4_output.txt  ollama_local.py  snake.css  snake.html  snake.js  sokoban.css  sokoban.html  sokoban.js  streaming.py  with_memory.py  wuziqi.css  wuziqi.html  wuziqi.js
examples/pomodoro/: index.html  script.js  style.css
examples/tuixiangzi/: index.html  main.js
lumen/: __init__.py  _types.py  agent.py  i18n.py
lumen/compact/: auto_compact.py  compactor.py  prompt.py
lumen/context/: git_state.py  memory.py  modes.py  project_scanner.py  session.py  session_memory.py  system_prompt.py  transcript.py
lumen/providers/: anthropic.py  base.py  factory.py  model_profiles.py  openai_compat.py
lumen/services/: __init__.py  abort.py  auto_dream.py  command_classifier.py  errors.py  file_edit_tracker.py  hooks.py  lsp.py  notifier.py  permissions.py  persistent_retry.py  prompt_cache.py  retry.py  review_state.py  skills.py  structured_output.py  subagent.py  thinking.py  tool_executor.py
lumen/tokens/: counter.py
lumen/tools/: __init__.py  approval.py  base.py  bash.py  definitions.py  discovery_tools.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  lsp.py  mcp_tool.py  registry.py  subagent_tool.py  task_tools.py  tree.py  web_fetch.py  web_search.py
tests/: benchmark_tools.py  test_lumen.py
(+5 files in other folders)
