[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumen"
version = "0.3.0"
description = "Model-agnostic coding agent — give any LLM the power to read, write, and understand code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "coding-agent", "code-reading", "code-writing", "agent", "context", "memory", "ai"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lumen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
